// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic column, classes should not change 1`] = `
{
  "colClass": {
    "default": 0,
    "type": "number",
  },
  "colClassLg": {
    "default": 6,
    "type": "number",
  },
  "colClassSm": {
    "default": 0,
    "type": "number",
  },
  "colClassXs": {
    "default": 0,
    "type": "number",
  },
  "displayBlock": {
    "default": true,
    "type": "boolean",
  },
  "editIsSelected": {
    "default": false,
    "type": "boolean",
  },
}
`;

exports[`basic column, should render column block with attributes 1`] = `
<div
  className=""
  style={
    {
      "backgroundColor": "red",
    }
  }
>
  <div
    className="inner_example_one inner_example_two"
    style={
      {
        "color": "blue",
      }
    }
  />
</div>
`;

exports[`basic column, should render column block with child 1`] = `
<div
  className=""
>
  <div
    className=""
  >
     Child 
  </div>
</div>
`;
